feat: docker file 생성(컴파일 local가능)